# PatMat

./: .gitignore  CMakeLists.txt  CharacterSet.C  Pattern.C  Pattern.H
Doc/: Tutorial.html  Tutorial.org
Test/: Assgn.C  CMakeLists.txt  example1.C  example4.C  test1.C  tutorial.C
